--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: white;
+  box-sizing: border-box;
 }
 
 code {
@@ -31,4 +32,7 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+p {
+  margin: 0;
 }
